--- a/views/medicalRecord.ejs
+++ b/views/medicalRecord.ejs
@@ -17,6 +17,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
+
                 </div>
             </div>
         </div>
@@ -37,7 +38,7 @@
             <td><%=data.date%></td>
             <td><%=data.medicine%></td>
             <td>
-                <a class="btn btn-primary" href="/" role="button">Add Medical Record</a>
+                <a class="btn btn-primary" href="/medical_record/<%=data.id%>/add" role="button">Add Medical Record</a>
             </td>
           </tr>
         </tbody>
