--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -18,24 +18,26 @@
                   <h3 class="mb-5">Welcome to HaloDokter!</h3>
       
                   <div class="form-outline mb-4">
-                    <label class="form-label">Email</label>
-                    <input type="email" id="email" class="form-control form-control-lg" name="email">
+                    <label class="form-label">Full Name</label>
+                    <input type="text" id="username" class="form-control form-control-lg" name = "username" placeholder="ex: Jhon Doe">
                   </div>
       
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Email</label>
+                    <input type="email" id="email" class="form-control form-control-lg" name="email" placeholder="ex: jhon@mail.com">
+                  </div>
+
                   <div class="form-outline mb-4">
                     <label class="form-label">Password</label>
                     <input type="password" id="password" class="form-control form-control-lg" name="password">
                   </div>
-      
-                  <!-- Checkbox -->
-                  <div class="form-check d-flex justify-content-start mb-4">
-                    <input class="form-check-input" type="checkbox" value="" id="rememberPassword" name ="rememberPassword">
-                    <label class="form-check-label" style="margin-left: 10px;"> Remember password </label>
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Role</label>
+                    <input type="text" id="role" class="form-control form-control-lg" name="role" placeholder="ex: Patient">
                   </div>
 
-                  <p> Don't have an account ? <a href="/register">Register</a></p>
-      
-                  <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                  <button class="btn btn-primary btn-lg btn-block" type="submit">Sign Up</button>
       
                 </div>
               </div>
