--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -16,7 +16,10 @@
                 <div class="card-body p-5 text-center">
       
                   <h3 class="mb-5">Welcome to HaloDokter!</h3>
-      
+                  <% if (error) { %>
+                    <p style="color: red;"><%= error %></p>
+                  <% } %>
+                  <form action="/login" method="post">
                   <div class="form-outline mb-4">
                     <label class="form-label">Email</label>
                     <input type="email" id="email" class="form-control form-control-lg" name="email">
@@ -26,17 +29,10 @@
                     <label class="form-label">Password</label>
                     <input type="password" id="password" class="form-control form-control-lg" name="password">
                   </div>
-      
-                  <!-- Checkbox -->
-                  <div class="form-check d-flex justify-content-start mb-4">
-                    <input class="form-check-input" type="checkbox" value="" id="rememberPassword" name ="rememberPassword">
-                    <label class="form-check-label" style="margin-left: 10px;"> Remember password </label>
-                  </div>
-
                   <p> Don't have an account ? <a href="/register">Register</a></p>
       
-                  <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-      
+                  <button class="btn btn-primary" type="submit">Login</button>
+                </form>
                 </div>
               </div>
             </div>
