--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -16,7 +16,8 @@
                 <div class="card-body p-5 text-center">
       
                   <h3 class="mb-5">Welcome to HaloDokter!</h3>
-      
+
+                <form action="/register" method="post">
                   <div class="form-outline mb-4">
                     <label class="form-label">Full Name</label>
                     <input type="text" id="username" class="form-control form-control-lg" name = "username" placeholder="ex: Jhon Doe">
@@ -32,13 +33,8 @@
                     <input type="password" id="password" class="form-control form-control-lg" name="password">
                   </div>
 
-                  <div class="form-outline mb-4">
-                    <label class="form-label">Role</label>
-                    <input type="text" id="role" class="form-control form-control-lg" name="role" placeholder="ex: Patient">
-                  </div>
-
-                  <button class="btn btn-primary btn-lg btn-block" type="submit">Sign Up</button>
-      
+                  <button class="btn btn-primary" type="submit">Sign Up</button>
+                </form>
                 </div>
               </div>
             </div>
