--- a/views/medicalRecordEdit.ejs
+++ b/views/medicalRecordEdit.ejs
@@ -23,17 +23,15 @@
         </div>
     </nav>
     <br>
-    <h3>Add Medical Record</h3>
-    <% errors.forEach(item => { %>
-        <li style="color:red;"><%= item %></li>
-    <% }) %>
-    <form action="/medical_record/<%= userId %>/add" method="post">
+    <h3>Edit Medical Record</h3>
+    <%data.map((e) => {%>
+    <form action="/medical_record/<%= userId %>/edit" method="post">
         <label for="history">History:</label><br>
-        <input type="text" id="history" name="history"><br>
+        <input type="text" id="history" name="history" placeholder="<%=e.history%>"><br>
         <label for="date">Date:</label><br>
-        <input type="date" id="date" name="date" min="2023-01-01" max="2024-12-31" /><br>      
+        <input type="date" id="date" name="date" min="2023-01-01" max="2024-12-31" placeholder="<%=e.date%>"/><br>      
         <label for="medicine">Medicine:</label><br>
-        <input type="text" id="medicine" name="medicine"><br><br>
+        <input type="text" id="medicine" name="medicine" placeholder="<%=e.medicine%>"><br><br>
         <select class="form-select" aria-label="Default select example">
             <option selected>Select Disease</option>
             <%disease.map((el) => {%>
@@ -42,6 +40,7 @@
         </select>
         <input type="submit" value="Submit">
       </form>
+      <%})%>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
