--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,63 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>List All Medical Record</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Medical Record</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    
-
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link" href="/logout">Logout</a>
                 </div>
             </div>
         </div>
     </nav>
     <br>
-    <form action="/" method="get">
-        <input type="text" name="search">
-        <input type="submit" value="Search">
-    </form>
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">id</th>
-            <th scope="col">User Name</th>
-            <th scope="col">Email</th>
-            <th scope="col">Password</th>
-            <th scope="col">Role</th>
-            <th scope="col">Action</th>
-            <th scope="col">History</th>
-          </tr>
-        </thead>
-        <%data.forEach((el) => {%>
-        <tbody>
-          <tr>
-            <th><%=el.id%></th>
-            <td><%=el.usernameFormat%></td>
-            <td><%=el.email%></td>
-            <td><%=el.password%></td>
-            <td><%=el.role%></td>
-            <td>
-                <a class="btn btn-primary" href="/medical_record/<%=el.id%>" role="button">See Medical Record</a>
-            </td>
-            <%el.Medical_Records.map((e)=>{%>
-            <td><%=e.history%></td>
-            <%})%>
-          </tr>
-        </tbody>
-        <%})%>
-      </table>
+    <div class="container">
+        <form action="/" method="get" class="d-flex justify-content-end">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+            <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+    </div>
+    <div class="container mt-4">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">No</th>
+                    <th scope="col">User Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Action</th>
+                    <th scope="col">History</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% data.forEach((el, index) => { %>
+                    <tr>
+                        <th scope="row"><%= index + 1 %></th>
+                        <td><%= el.usernameFormat %></td>
+                        <td><%= el.email %></td>
+                        <td><%= el.role %></td>
+                        <td>
+                            <a class="btn btn-primary" href="/medical_record/<%= el.id %>" role="button">See Medical Record</a>
+                        </td>
+                        <% el.Medical_Records.map((e) => { %>
+                            <td><%= e.history %></td>
+                        <% }) %>
+                    </tr>
+                <% }) %>
+            </tbody>
+        </table>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
