--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -5,38 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+  
+  </head>
 <body>
       
-    <section class="vh-100" style=" background-image: url('https://img.freepik.com/free-photo/stethoscope-blister-pack-pill-with-office-supplies-green-background_23-2148213940.jpg?w=1800&t=st=1710981076~exp=1710981676~hmac=d4d11b062ed7c0b9d2e97db5d6429ab61e4ea8b586d7de92ebeee9a257d580a3'); background-size: cover;">
+    <section class="vh-100" style="background-image: url('https://i.pinimg.com/564x/b2/19/13/b219139b0fd6a082ecb708a29350237c.jpg'); background-size: contain;">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-              <div class="card shadow-2-strong" style="border-radius: 1rem;">
+              <div class="card shadow-2-strong bg-white" style="border-radius: 1rem; opacity: 0.9;">
                 <div class="card-body p-5 text-center">
       
                   <h3 class="mb-5">Welcome to HaloDokter!</h3>
+                  <% if (error) { %>
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                      <%= error %>
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                  <% } %>
+                  <form action="/login" method="post">
+                    <div class="form-floating mb-4">
+                      <input type="email" id="email" class="form-control form-control-lg" name="email" placeholder="Email">
+                      <label for="email">Email</label>
+                    </div>
       
-                  <div class="form-outline mb-4">
-                    <label class="form-label">Email</label>
-                    <input type="email" id="email" class="form-control form-control-lg" name="email">
-                  </div>
+                    <div class="form-floating mb-4">
+                      <input type="password" id="password" class="form-control form-control-lg" name="password" placeholder="Password">
+                      <label for="password">Password</label>
+                    </div>
+                    <p>Don't have an account? <a href="/register">Register</a></p>
       
-                  <div class="form-outline mb-4">
-                    <label class="form-label">Password</label>
-                    <input type="password" id="password" class="form-control form-control-lg" name="password">
-                  </div>
-      
-                  <!-- Checkbox -->
-                  <div class="form-check d-flex justify-content-start mb-4">
-                    <input class="form-check-input" type="checkbox" value="" id="rememberPassword" name ="rememberPassword">
-                    <label class="form-check-label" style="margin-left: 10px;"> Remember password </label>
-                  </div>
-
-                  <p> Don't have an account ? <a href="/register">Register</a></p>
-      
-                  <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-      
+                    <button class="btn btn-primary" type="submit">Login</button>
+                  </form>
                 </div>
               </div>
             </div>
