--- a/views/medicalRecord.ejs
+++ b/views/medicalRecord.ejs
@@ -1,64 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Add Medical Record</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Medical Record</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-
-                </div>
+              <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="/logout">Logout</a>
+              </div>
             </div>
         </div>
     </nav>
-    <br>
-    <div style="background-color: lemonchiffon;" class="d-flex">
-        <%=total%>
-        <button type="button" class="btn-close btn-close-black me-2 m-auto" aria-label="Close"></button>
-    </div>
-
-    <a class="btn btn-primary" href="/medical_record/<%= id %>/add" role="button">Add Medical Record</a>
-
-    <% if (msg) { %>
-        <div style="text-align: center; color: blueviolet;">
-          <h3><%= msg %></h3>  
+    <div class="container mt-4">
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+            <%= total %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-      <% } %>
-
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">History</th>
-            <th scope="col">Date</th>
-            <th scope="col">Medicine</th>
-            <th scope="col">Action</th>
-          </tr>
-        </thead>
-        <%data.map((el) => {%>
-        <tbody>
-          <tr>
-            <th><%=el.history%></th>
-            <td><%=dateFormat(el.date)%></td>
-            <td><%=el.medicine%></td>
-            <td>
-                <a class="btn btn-primary" href="/medical_record/<%=id%>/edit" role="button">Edit Medical Record</a>
-                <a class="btn btn-danger" href="/medical_record/<%=id%>/delete" role="button">Delete Medical Record</a>
-            </td>
-        </tr>
-    </tbody>
-        <%})%>
-      </table>
+        <a class="btn btn-primary mb-3" href="/medical_record/<%= id %>/add" role="button">Add Medical Record</a>
+        <% if (msg) { %>
+            <div class="alert alert-success" role="alert">
+                <%= msg %>
+            </div>
+        <% } %>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">History</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Medicine</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% data.forEach((el) => { %>
+                    <tr>
+                        <td><%= el.history %></td>
+                        <td><%= dateFormat(el.date) %></td>
+                        <td><%= el.medicine %></td>
+                        <td>
+                            <a class="btn btn-primary me-2" href="/medical_record/<%= id %>/edit" role="button">Edit</a>
+                            <a class="btn btn-danger" href="/medical_record/<%= id %>/delete" role="button">Delete</a>
+                        </td>
+                    </tr>
+                <% }) %>
+            </tbody>
+        </table>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
