--- a/views/medicalRecordAdd.ejs
+++ b/views/medicalRecordAdd.ejs
@@ -1,47 +1,58 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Medical Record</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-
-                </div>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Add Medical Record</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <div class="container">
+      <a class="navbar-brand text-white" href="/">Medical Record</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="/logout">Logout</a>
         </div>
-    </nav>
-    <br>
-    <h3>Add Medical Record</h3>
-    <% errors.forEach(item => { %>
+      </div>
+    </div>
+  </nav>
+  <div class="container mt-4">
+    <a href="/medical_record/<%= userId %>" class="btn btn-secondary mb-3">Back</a>
+    <h3 class="mb-4">Add Medical Record</h3>
+    <ul class="list-unstyled">
+      <% errors.forEach(item => { %>
         <li style="color:red;"><%= item %></li>
-    <% }) %>
+      <% }) %>
+    </ul>
     <form action="/medical_record/<%= userId %>/add" method="post">
-        <label for="history">History:</label><br>
-        <input type="text" id="history" name="history"><br>
-        <label for="date">Date:</label><br>
-        <input type="date" id="date" name="date" min="2023-01-01" max="2024-12-31" /><br>      
-        <label for="medicine">Medicine:</label><br>
-        <input type="text" id="medicine" name="medicine"><br><br>
-        <select class="form-select" aria-label="Default select example">
-            <option selected>Select Disease</option>
-            <%disease.map((el) => {%>
-            <option value="<%=el.id%>"><%=el.name%></option>
-            <%})%>
+      <div class="mb-3">
+        <label for="history" class="form-label">History:</label>
+        <input type="text" class="form-control" id="history" name="history">
+      </div>
+      <div class="mb-3">
+        <label for="date" class="form-label">Date:</label>
+        <input type="date" class="form-control" id="date" name="date" min="2023-01-01" max="2024-12-31">
+      </div>
+      <div class="mb-3">
+        <label for="medicine" class="form-label">Medicine:</label>
+        <input type="text" class="form-control" id="medicine" name="medicine">
+      </div>
+      <div class="mb-3">
+        <label for="disease" class="form-label">Select Disease:</label>
+        <select class="form-select" id="disease" name="disease">
+          <option selected>Select Disease</option>
+          <% disease.forEach((el) => { %>
+            <option value="<%= el.id %>"><%= el.name %></option>
+          <% }) %>
         </select>
-        <input type="submit" value="Submit">
-      </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+      </div>
+      <button type="submit" class="btn btn-primary me-2">Submit</button>
+    </form>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
