--- a/views/medicalRecordEdit.ejs
+++ b/views/medicalRecordEdit.ejs
@@ -1,46 +1,64 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Medical Record</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-
-                </div>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Edit Medical Record</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Medical Record</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          
         </div>
-    </nav>
-    <br>
-    <h3>Edit Medical Record</h3>
-    <%data.map((e) => {%>
-    <form action="/medical_record/<%= userId %>/edit" method="post">
-        <label for="history">History:</label><br>
-        <input type="text" id="history" name="history" placeholder="<%=e.history%>"><br>
-        <label for="date">Date:</label><br>
-        <input type="date" id="date" name="date" min="2023-01-01" max="2024-12-31" placeholder="<%=e.date%>"/><br>      
-        <label for="medicine">Medicine:</label><br>
-        <input type="text" id="medicine" name="medicine" placeholder="<%=e.medicine%>"><br><br>
-        <select class="form-select" aria-label="Default select example">
-            <option selected>Select Disease</option>
-            <%disease.map((el) => {%>
-            <option value="<%=el.id%>"><%=el.name%></option>
+      </div>
+    </div>
+  </nav>
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col-lg-6 mx-auto">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title text-center mb-4">Edit Medical Record</h3>
+            <%data.map((e) => {%>
+            <form action="/medical_record/<%= userId %>/edit" method="post">
+              <div class="mb-3">
+                <label for="history" class="form-label">History:</label>
+                <input type="text" id="history" name="history" class="form-control" placeholder="<%=e.history%>">
+              </div>
+              <div class="mb-3">
+                <label for="date" class="form-label">Date:</label>
+                <input type="date" id="date" name="date" class="form-control" min="2023-01-01" max="2024-12-31" placeholder="<%=e.date%>">
+              </div>
+              <div class="mb-3">
+                <label for="medicine" class="form-label">Medicine:</label>
+                <input type="text" id="medicine" name="medicine" class="form-control" placeholder="<%=e.medicine%>">
+              </div>
+              <div class="mb-3">
+                <label for="disease" class="form-label">Select Disease:</label>
+                <select class="form-select" id="disease" name="disease" aria-label="Default select example">
+                  <option selected>Select Disease</option>
+                  <option value="piperacillin and tazobactam" name = "disease" <%= e.disease === 'piperacillin and tazobactam' ? 'selected': '' %>>piperacillin and tazobactam</option>
+                  <option value="Nifedipine" name = "disease" <%= e.disease === 'Nifedipine' ? 'selected': '' %>>Nifedipine</option>
+                  <option value="Rizatriptan Benzoate" name = "disease" <%= e.disease === 'Rizatriptan Benzoate' ? 'selected': '' %>>Rizatriptan Benzoate</option>
+                  <option value="PSEUDOEPHEDRINE HYDROCHLORIDE, GUAIFENESIN, and DEXTROMETHORPHAN HYDROBROMIDE" name = "disease" <%= e.disease === 'PSEUDOEPHEDRINE HYDROCHLORIDE, GUAIFENESIN, and DEXTROMETHORPHAN HYDROBROMIDE' ? 'selected': '' %>>PSEUDOEPHEDRINE HYDROCHLORIDE, GUAIFENESIN, and DEXTROMETHORPHAN HYDROBROMIDE</option>
+                  <option value="Amoxicillin and Clavulanate Potassium" name = "disease" <%= e.disease === 'Amoxicillin and Clavulanate Potassium' ? 'selected': '' %>>Amoxicillin and Clavulanate Potassium</option>
+                </select>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
             <%})%>
-        </select>
-        <input type="submit" value="Submit">
-      </form>
-      <%})%>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
