--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -8,15 +8,16 @@
 </head>
 <body>
       
-    <section class="vh-100" style=" background-image: url('https://img.freepik.com/free-photo/stethoscope-blister-pack-pill-with-office-supplies-green-background_23-2148213940.jpg?w=1800&t=st=1710981076~exp=1710981676~hmac=d4d11b062ed7c0b9d2e97db5d6429ab61e4ea8b586d7de92ebeee9a257d580a3'); background-size: cover;">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-              <div class="card shadow-2-strong" style="border-radius: 1rem;">
-                <div class="card-body p-5 text-center">
+  <section class="vh-100" style="background-image: url('https://i.pinimg.com/564x/b2/19/13/b219139b0fd6a082ecb708a29350237c.jpg'); background-size: contain;">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card shadow-2-strong bg-white" style="border-radius: 1rem; opacity: 0.9;">
+            <div class="card-body p-5 text-center">
       
                   <h3 class="mb-5">Welcome to HaloDokter!</h3>
-      
+
+                <form action="/register" method="post">
                   <div class="form-outline mb-4">
                     <label class="form-label">Full Name</label>
                     <input type="text" id="username" class="form-control form-control-lg" name = "username" placeholder="ex: Jhon Doe">
@@ -34,11 +35,14 @@
 
                   <div class="form-outline mb-4">
                     <label class="form-label">Role</label>
-                    <input type="text" id="role" class="form-control form-control-lg" name="role" placeholder="ex: Patient">
+                    <select id="role" class="form-select form-select-lg" name="role">
+                      <option value="Patients">Patients</option>
+                      <option value="Doctors">Doctors</option>
+                    </select>
                   </div>
 
-                  <button class="btn btn-primary btn-lg btn-block" type="submit">Sign Up</button>
-      
+                  <button class="btn btn-primary" type="submit">Sign Up</button>
+                </form>
                 </div>
               </div>
             </div>
